--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
+      type="image/png"
+      href="/images/Logo_Single_Icon.png"
     />
     <meta
       name="viewport"
